--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 06 2023 10:10:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 24 2023 18:45:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a6bd8c02e0fa05c9f6e6" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -179,7 +179,7 @@
           </div>
           <div class="div-block-57 rightsfooterbutton">
             <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="button-primary outline-button buttonfooter w-button">Github</a>
-            <a href="documents/Resume-Eng-Michael-Nederhoed.pdf" target="_blank" class="button-primary outline-button buttonfooter w-button">Resume nl</a>
+            <a href="documents/CV-Engels-AI.pdf" target="_blank" class="button-primary outline-button buttonfooter w-button">Resume</a>
           </div>
         </div>
         <div class="div-block-18">
