--- a/project.html
+++ b/project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 06 2023 10:10:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 24 2023 18:45:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756736755355b7c" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -84,7 +84,7 @@
       </div>
       <h1 class="header-prototype">Responsible AI App Prototype</h1>
       <p class="textprojectintial"><span class="textprojectintial"> This prototype application contains my image classification algorithm using deep neural networks. This algorithm combines several significant features, including enhanced fairness, transparency, explainability (XAI), and less bias. This application&#x27;s use case is to teach AI specialists how to utilize deep learning while keeping those important factors in mind, particularly for image recognition. </span></p>
-      <div class="div-block-27"><img src="images/prototype2.webp" loading="eager" sizes="(max-width: 479px) 99vw, (max-width: 991px) 75vw, 800px" data-w-id="9f1d4216-754e-58ee-b410-0da127ebdc62" width="700" alt="app shown in 2 phones" srcset="images/prototype2-p-500.png 500w, images/prototype2-p-800.png 800w, images/prototype2-p-1080.png 1080w, images/prototype2.webp 1459w" class="image-8"></div>
+      <div class="div-block-27"><img src="images/prototype2.webp" loading="eager" data-w-id="9f1d4216-754e-58ee-b410-0da127ebdc62" width="700" alt="app shown in 2 phones" srcset="images/prototype2-p-500.png 500w, images/prototype2-p-800.png 800w, images/prototype2-p-1080.png 1080w, images/prototype2.webp 1459w" sizes="(max-width: 479px) 99vw, (max-width: 991px) 75vw, 800px" class="image-8"></div>
       <h2 id="Demo2" class="header-prototype second-header">Demo Prototype App</h2>
       <p class="textprojectintial"><span class="textprojectintial demoapp">To showcase the app, I have created a demonstration that contains three different screens within the app. This demonstration can be found under this text. I adopted the &quot;design thinking&quot; methodology to produce a human-centered design. In addition to that, I have also conducted A/B testing to ensure the finest user experience.</span></p>
       <div data-current="Tab 1" data-easing="ease" data-duration-in="0" data-duration-out="0" class="tabs-2 w-tabs">
@@ -138,8 +138,8 @@
           </a>
         </div>
       </div>
-      <div class="app-background"><img src="images/iphone_background.webp" loading="eager" sizes="100vw" data-w-id="532f570b-2210-2e4a-7515-19a134caf6d5" width="700" alt="app shown in mutiple phones in pattern" srcset="images/iphone_background-p-500.png 500w, images/iphone_background-p-800.png 800w, images/iphone_background-p-1080.png 1080w, images/iphone_background-p-1600.png 1600w, images/iphone_background.webp 2000w" class="image-8-copy"></div>
-      <div class="div-block-37"><img src="images/PhonesFloor.webp" loading="lazy" width="1676.5" data-w-id="c0307cd5-c0a1-2788-1ccd-633fd3802b45" sizes="100vw" alt="app shown in phones in pattern" srcset="images/PhonesFloor-p-500.png 500w, images/PhonesFloor-p-800.png 800w, images/PhonesFloor-p-1080.png 1080w, images/PhonesFloor-p-1600.png 1600w, images/PhonesFloor-p-2000.png 2000w, images/PhonesFloor-p-2600.png 2600w, images/PhonesFloor-p-3200.png 3200w, images/PhonesFloor.webp 3353w" class="image-23">
+      <div class="app-background"><img src="images/iphone_background.webp" loading="eager" data-w-id="532f570b-2210-2e4a-7515-19a134caf6d5" width="700" alt="app shown in mutiple phones in pattern" srcset="images/iphone_background-p-500.png 500w, images/iphone_background-p-800.png 800w, images/iphone_background-p-1080.png 1080w, images/iphone_background-p-1600.png 1600w, images/iphone_background.webp 2000w" sizes="100vw" class="image-8-copy"></div>
+      <div class="div-block-37"><img src="images/PhonesFloor.webp" loading="lazy" width="1676.5" data-w-id="c0307cd5-c0a1-2788-1ccd-633fd3802b45" alt="app shown in phones in pattern" srcset="images/PhonesFloor-p-500.png 500w, images/PhonesFloor-p-800.png 800w, images/PhonesFloor-p-1080.png 1080w, images/PhonesFloor-p-1600.png 1600w, images/PhonesFloor-p-2000.png 2000w, images/PhonesFloor-p-2600.png 2600w, images/PhonesFloor-p-3200.png 3200w, images/PhonesFloor.webp 3353w" sizes="100vw" class="image-23">
         <div class="div-block-38"></div>
       </div>
       <h2 id="XAI" class="header-prototype third-header">Explainable Artificial Intelligence</h2>
@@ -214,7 +214,7 @@
           <p class="paragraph-3-copy">In the images above you can see that my model focuses on the clothing, the couples/dancers are wearing. It also focuses on the lightning effects highlighted on the dance floor (second picture). My model classified those images correctly. <br>Those are GOOD features in terms of responsible Al.</p>
         </div>
       </div>
-      <div class="div-block-22"><img src="images/Screenshot-2022-07-07-at-14.38.25.webp" loading="lazy" srcset="images/Screenshot-2022-07-07-at-14.38.25-p-500.png 500w, images/Screenshot-2022-07-07-at-14.38.25.webp 824w" alt="" sizes="100vw" class="inside-image"><img src="images/iphone.webp" loading="lazy" srcset="images/iphone-p-500.png 500w, images/iphone-p-800.png 800w, images/iphone.webp 1076w" alt="" sizes="100vw" class="image-10"></div>
+      <div class="div-block-22"><img src="images/Screenshot-2022-07-07-at-14.38.25.webp" loading="lazy" sizes="100vw" srcset="images/Screenshot-2022-07-07-at-14.38.25-p-500.png 500w, images/Screenshot-2022-07-07-at-14.38.25.webp 824w" alt="" class="inside-image"><img src="images/iphone.webp" loading="lazy" sizes="100vw" srcset="images/iphone-p-500.png 500w, images/iphone-p-800.png 800w, images/iphone.webp 1076w" alt="" class="image-10"></div>
       <div class="div-block-59">
         <p class="aftertextxai2"><span class="aftertextxai">I hope that you now have a deeper insight into why explainable AI is so essential. Deep Learning is often considered a &quot;black box&quot; and a challenging concept. The process by which your model comes to certain conclusions is extremely complicated and occasionally thought to be unknown. By dismantling this &quot;black box&quot; using innovative techniques, you can explain to your users or customers how your artificial intelligence (AI) behaves.</span></p>
         <div class="text-block-18">!</div>
@@ -222,7 +222,7 @@
       <h2 id="transparancy" class="header-prototype fourth-header">Neural Network Algorithm</h2>
       <p class="transparancy-text"><span class="textprojectintial">The algorithm used for this app falls under a convolutional neural network (CNN). This algorithm is perfectly tuned to distinguish either dancing or wedding images. As was stated earlier on this page, the use-case for this model is to teach AI experts how to utilize deep learning in a responsible and transparent manner. To refine the model even more for this goal, transfer learning and hyper parameter tweaking have been applied &amp; tested. The model has been developed in Python using Tensorflow/Keras. </span></p>
       <div class="_2-screens-picture">
-        <div class="app-picture"><img src="images/suggestions_screen.webp" loading="eager" sizes="(max-width: 479px) 71vw, (max-width: 991px) 60vw, (max-width: 1279px) 500px, 650px" data-w-id="dd2d5de4-cb76-f9cc-94f4-a844c0c86ed9" width="700" alt="suggestions and algorithm screens in phone" srcset="images/suggestions_screen-p-500.png 500w, images/suggestions_screen-p-800.png 800w, images/suggestions_screen-p-1080.png 1080w, images/suggestions_screen.webp 1500w" class="suggestions-tab"><img src="images/algorithm_screen.webp" loading="eager" sizes="(max-width: 479px) 71vw, (max-width: 991px) 60vw, (max-width: 1279px) 500px, 650px" data-w-id="b23521a1-d70d-6819-8d00-c693f5ef3640" width="700" alt="" srcset="images/algorithm_screen-p-500.png 500w, images/algorithm_screen-p-800.png 800w, images/algorithm_screen-p-1080.png 1080w, images/algorithm_screen.webp 1500w" class="algorithm-screen"></div>
+        <div class="app-picture"><img src="images/suggestions_screen.webp" loading="eager" data-w-id="dd2d5de4-cb76-f9cc-94f4-a844c0c86ed9" width="700" alt="suggestions and algorithm screens in phone" srcset="images/suggestions_screen-p-500.png 500w, images/suggestions_screen-p-800.png 800w, images/suggestions_screen-p-1080.png 1080w, images/suggestions_screen.webp 1500w" sizes="(max-width: 479px) 71vw, (max-width: 991px) 60vw, (max-width: 1279px) 500px, 650px" class="suggestions-tab"><img src="images/algorithm_screen.webp" loading="eager" data-w-id="b23521a1-d70d-6819-8d00-c693f5ef3640" width="700" alt="" srcset="images/algorithm_screen-p-500.png 500w, images/algorithm_screen-p-800.png 800w, images/algorithm_screen-p-1080.png 1080w, images/algorithm_screen.webp 1500w" sizes="(max-width: 479px) 71vw, (max-width: 991px) 60vw, (max-width: 1279px) 500px, 650px" class="algorithm-screen"></div>
       </div>
     </div>
     <div id="Footer" class="footer">
@@ -234,7 +234,7 @@
         </div>
         <div class="div-block-57 rightsfooterbutton">
           <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="button-primary outline-button buttonfooter w-button">Github</a>
-          <a href="documents/Resume-Eng-Michael-Nederhoed.pdf" target="_blank" class="button-primary outline-button buttonfooter w-button">Resume nl</a>
+          <a href="documents/CV-Engels-AI.pdf" target="_blank" class="button-primary outline-button buttonfooter w-button">Resume</a>
         </div>
       </div>
       <div class="div-block-18">
