--- a/robotics-vision.html
+++ b/robotics-vision.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 06 2023 10:10:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 24 2023 18:45:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="64f5afddbe44e73efe70f177" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -54,7 +54,7 @@
             <a href="https://michaelned.github.io/PortfolioMichael/index.html#project" class="nav-link-7 dividernavphone w-nav-link">PROJECTS</a>
             <a href="#about-robotics" class="nav-link-7 navdividerphonelower w-nav-link">ABOUT</a>
             <a href="#robotics-demo" class="nav-link-7 w-nav-link">DEMO</a>
-            <a href="#Footer" class="nav-link-8 w-nav-link">CONTACT ME</a>
+            <a href="#" class="nav-link-8 w-nav-link">CONTACT ME</a>
           </nav>
         </div>
       </div>
@@ -84,7 +84,7 @@
         <a href="mailto:michaelnederhoed@icloud.com?subject=Contact" class="w-inline-block"><img alt="e-mail button" loading="lazy" src="images/mail.webp" class="imagenav-copy image-3-copy image-3"></a>
         <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="link-block-2 w-inline-block"><img alt="Github button" loading="lazy" src="images/GitHub-Mark-64px.webp" class="image-3 imagenav-copy image-3-copy"></a>
       </div>
-      <a href="#Footer" class="nav-link-2 w-nav-link">CONTACT ME</a>
+      <a href="#" class="nav-link-2 w-nav-link">CONTACT ME</a>
     </div>
   </div>
   <div data-w-id="d19f8942-644b-5e3a-2b80-45e7461ba794" class="div-block-45"></div>
@@ -118,6 +118,11 @@
         <p id="about-robotics" class="paragraph-8">Notably, this project exclusively relies on sensors and components only available in real-world setups, ensuring practical relevance.</p>
       </div>
     </div>
+    <div class="roboticsquote">
+      <p class="paragraph-9 quotep">The most intriguing aspect of this project for me was observing how different AI systems collaborated to accomplish a single task. I employed various AI techniques, including reinforcement learning, where the AI teaches itself to perform tasks without relying on pre-existing data. For example, we trained the robot arm to move from point A to point B and determine which motors to use. By rewarding the robot when it performed correctly and penalizing it for errors, we created a reward function. The robot earned points for getting closer to its target, and it learned to optimize its movements accordingly. Occasionally, the robot would apply excessive force in order to gain as much reward points, which could be dangerous. As a result, we implemented a system of penalty points to discourage such behaviour. It is interesting and almost fun to see a robot train itself. <br></p>
+      <h2 id="Brand" class="header-website-2 second robotquote robotquote3">,</h2>
+      <h2 id="Brand" class="header-website-2 second robotquote robotquote2">,</h2>
+    </div>
     <div class="div-block-69">
       <h2 id="Brand" class="header-website-2 second">Techniques</h2>
       <h2 id="Brand" class="header-website-2 second h2thirdabove">Used Industry leading</h2>
@@ -148,24 +153,24 @@
         <div class="text-block-22 step34robot">Step 4</div>
       </div>
     </div>
-    <div id="Footer" class="footer footerrobotics">
-      <div id="contact" class="text-block-21">LET&#x27;S CONNECT</div>
-      <div class="div-block-61">
-        <div class="div-block-62 leftfooterbutton">
+    <div id="Footer" class="footer">
+      <div id="contact" class="text-block-7">LET&#x27;S CONNECT</div>
+      <div class="div-block-58">
+        <div class="div-block-57 leftfooterbutton">
           <a href="https://www.linkedin.com/in/michaelnederhoed/" target="_blank" class="button-primary outline-button buttonfooter w-button">Linkedin</a>
           <a href="mailto:michaelnederhoed@icloud.com?subject=Contact" class="button-primary outline-button buttonfooter w-button">e-mail</a>
         </div>
-        <div class="div-block-62 rightsfooterbutton">
+        <div class="div-block-57 rightsfooterbutton">
           <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="button-primary outline-button buttonfooter w-button">Github</a>
-          <a href="#" class="button-primary outline-button buttonfooter w-button">Resume nl</a>
+          <a href="documents/CV-Engels-AI.pdf" target="_blank" class="button-primary outline-button buttonfooter w-button">Resume</a>
         </div>
       </div>
-      <div class="div-block-60">
-        <a href="http://kedin.com/in/michaelnederhoed/" target="_blank" class="w-inline-block"><img src="images/linkedin.webp" loading="lazy" alt="" class="image-32 imagenav"></a>
-        <a href="mailto:michaelnederhoed@icloud.com?subject=Contact" class="w-inline-block"><img src="images/mail.webp" loading="lazy" alt="" class="image-32 imagenav"></a>
-        <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="w-inline-block"><img src="images/GitHub-Mark-120px-plus.webp" loading="lazy" alt="" class="image-32 imagenav"></a>
+      <div class="div-block-18">
+        <a href="http://kedin.com/in/michaelnederhoed/" target="_blank" class="w-inline-block"><img src="images/linkedin.webp" loading="lazy" alt="LinkedIn button" class="image-3 imagenav"></a>
+        <a href="mailto:michaelnederhoed@icloud.com?subject=Contact" class="w-inline-block"><img src="images/mail.webp" loading="lazy" alt="e-mail button" class="image-3 imagenav"></a>
+        <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="w-inline-block"><img src="images/GitHub-Mark-120px-plus.webp" loading="lazy" alt="" class="image-3 imagenav"></a>
       </div>
-      <p class="paragraph-6">Michael Nederhoed | Portfolio Showcase | Made by Michael Nederhoed 2022 - 2023</p>
+      <p class="paragraph-2">Michael Nederhoed | Portfolio Showcase | Made by Michael Nederhoed 2022</p>
     </div>
   </div>
   <div id="nav" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navproject2-2 w-nav">
