--- a/website.html
+++ b/website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 06 2023 10:10:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 24 2023 18:45:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62e7a5a0f756736981355b7d" data-wf-site="62c17bc1f49c32e14cd178e7">
 <head>
   <meta charset="utf-8">
@@ -87,7 +87,7 @@
   <div id="projects" class="body-placeholder">
     <div class="content websitenoborder">
       <div class="div-block-56">
-        <p class="paragraph-5"><strong class="skillsdashboard">Customer Contact - CSS - HTML - Branding - Coding - Search Engine Optimaztion - Website Designer - Customer Contact - CSS - HTML - Branding - Coding - Search Engine Optimaztion - Website Designer -Customer Contact - CSS - HTML - Branding - Coding - Search Engine Optimaztion - Website Designer -</strong></p>
+        <p data-w-id="41a6dc91-ccbb-a9eb-eaf0-4d87bcf0ec8c" class="paragraph-5"><strong class="skillsdashboard">Customer Contact - CSS - HTML - Branding - Coding - Search Engine Optimaztion - Website Designer - Customer Contact - CSS - HTML - Branding - Coding - Search Engine Optimaztion - Website Designer -Customer Contact - CSS - HTML - Branding - Coding - Search Engine Optimaztion - Website Designer -</strong></p>
       </div>
       <h1 class="header-website">CUSTOMER WEBSITE <br>FOR A BEAUTY SALON</h1>
       <p class="paragraph-3">An informative website realised for a Dutch beauty salon, including branding, design, and search engine optimisation. Dutch is the language used on the website because it is situated in the Netherlands.</p>
@@ -122,7 +122,7 @@
         </div>
         <div class="div-block-57 rightsfooterbutton">
           <a href="https://github.com/MichaelNed/PortfolioMichael" target="_blank" class="button-primary outline-button buttonfooter w-button">Github</a>
-          <a href="documents/Resume-Eng-Michael-Nederhoed.pdf" target="_blank" class="button-primary outline-button buttonfooter w-button">Resume nl</a>
+          <a href="documents/CV-Engels-AI.pdf" target="_blank" class="button-primary outline-button buttonfooter w-button">Resume</a>
         </div>
       </div>
       <div class="div-block-18">
